# media-downloader

./: .gitignore  AGENTS.md  LICENSE  README.md  build.py  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  test_pyweb.py  tsconfig.cli.json  tsconfig.node.json  tsconfig.web.json
.agents/skills/commit/: SKILL.md
.agents/skills/feature-tdd/: SKILL.md
.agents/topics/: editing-rules.md  git-workflow.md
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  file_manager.py  interfaces.py  logger.py  media_downloader.py  media_downloader_facade.py  service_container.py  summarization_service.py  transcript_processor.py
features/: app-shell.feature  download-lifecycle.feature  download-options.feature  transcript.feature  url-validation.feature
features/steps/: app-shell.steps.ts
gui/: __init__.py  html_interface.py  media_downloader_gui.py  media_downloader_webview.py  webview_api.py
scripts/: update-ytdlp.mjs
src/cli/: index.ts
src/core/: downloader.test.ts  downloader.ts  file-manager.ts  transcript.ts  types.ts
src/main/: index.ts  ipc-handlers.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.css  App.tsx  env.d.ts
