[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mp3-downloader"
version = "1.0.0"
description = "A GUI application for downloading MP3s from YouTube"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MP3 Downloader", email = "mp3downloader@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.7"
dependencies = [
    "yt-dlp>=2023.1.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=5.0",
]

[project.scripts]
mp3-downloader = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/mp3-downloader"
Repository = "https://github.com/yourusername/mp3-downloader"
Issues = "https://github.com/yourusername/mp3-downloader/issues"

[tool.setuptools]
py-modules = ["main"]

# PyInstaller configuration
[tool.pyinstaller]
onefile = true
windowed = true
name = "MP3_Downloader"
icon = ""
collect_all = ["yt_dlp"]
hidden_imports = [
    "yt_dlp",
    "yt_dlp.extractor",
    "yt_dlp.extractor.youtube",
    "yt_dlp.downloader",
    "yt_dlp.downloader.http",
    "yt_dlp.postprocessor",
    "yt_dlp.postprocessor.ffmpeg",
    "yt_dlp.utils",
    "yt_dlp.version",
    "tkinter",
    "tkinter.ttk",
    "tkinter.filedialog",
    "tkinter.messagebox",
]